# cli

./: .gitignore  pyproject.toml
cli/: config.toml  manager.py  run  runner.py
cli/cmd/: al.py  chk.py  db.py  dc.py  fmt.py  git.py  init.py
