[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Artur Lagunov <lagunovartur@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
cli = "cli.run:main"